# honeypot

./: .gitignore  README.md  meetings.md
config/: README.md  honeypot.cron  inetd.conf  logrotate.conf  sshd_config  vncservice.service
fetch_dp/: Cargo.toml
fetch_dp/src/: main.rs
log_parser/: Cargo.toml  test.bak
log_parser/src/: database.rs  main.rs  models.rs  parser.rs
pylogparse/: create.sql  fetch-ip.py  pylogparse.py  pyproject.toml  requirements.txt
scripts/: fetch-dataplane.sh  hosts2ip.py  logown.sh  pyeval.py  setup-debian-hp.sh  setup-hp-db.sh  upload-logs.sh
spark/: 00_first-steps.ipynb  01_export-hostnames.ipynb  02-analysis-freq-weekdays.ipynb  03-analysis-ramp-up.ipynb  03-download-data.ipynb  04-analysis-ramp-up.ipynb  05-analysis-hourly.ipynb  06-analysis-daily.ipynb  07-analysis-day-of-week.ipynb  08-integrate-country-in-ip-csv.ipynb  09-timezone-analysis.ipynb  10-analysis-ip-origins-ssh.ipynb  11-analysis-ip-origins-telnet.ipynb  configuration.py  data.py  export-hostnames.ipynb  first-steps.ipynb  setup-pd.py  setup.py  utils.py
