[package]
name = "log_parser"
version = "0.1.0"
authors = ["Max Resing <max.resing@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
postgres = "0.19.1"
regex = "1.5.4"
syslog_loose = "0.10.0"

